5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1649_2703.log
== TEST (2019-04-05 18:38:40) 
-- CODE:
idade=int(input("idade"))
if (idade>=18) :
    print(eleitor)
else:
    print(nao_eleitor)
 
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:39:17) 
-- CODE:
idade=int(input("idade"))
if (idade>=18) :
    print("eleitor")
else:
    print('nao_eleitor")
 
 
-- ERROR:
File "XXXX", line 5
    print('nao_eleitor")
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:39:25) 
-- CODE:
idade=int(input("idade"))
if (idade>=18) :
    print("eleitor")
else:
    print("nao_eleitor")
 
 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:39:35) 
-- CODE:
idade=int(input("idade"))
if (idade>=18) :
    print("eleitor")
else:
    print("nao_eleitor")
 
 
-- EXECUTION TIME:
0.12601
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:46:43) 
-- CODE:
idade=int(input("idade"))
if(idade>=18):
	print("eleitor")
else:
	print("nao eleitor")
-- EXECUTION TIME:
0.155225
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:47:19) 
-- CODE:
idade=int(input("idade"))
if(idade >=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.153045
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
